Stretch hint boxes to full body & fix post-list-item images.

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -568,6 +568,7 @@ sup[id^="fnref:"] a
 	display: inline-block;
 	font-family: sans-serif;
 	font-size: 0.87em; /* stop the growth */
+	width: 100%;
 }
 
 /* Caption */
